--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,11 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.vault</groupId>
+            <artifactId>spring-vault-core</artifactId>
+            <version>3.2.0</version>
+        </dependency>
 
         <!-- test -->
         <dependency>
