--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <packaging>jar</packaging>
 
     <artifactId>woody-http-bridge</artifactId>
-    <version>0.0.3</version>
+    <version>0.0.4</version>
 
     <name>woody-http-bridge</name>
     <description>woody-http-bridge</description>
@@ -113,6 +113,7 @@
             <groupId>dev.vality</groupId>
             <artifactId>adapter-common-lib</artifactId>
             <version>2.0.5</version>
+            <scope>provided</scope>
         </dependency>
 
         <!--third party-->
