--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <packaging>jar</packaging>
 
     <artifactId>woody-http-bridge</artifactId>
-    <version>0.0.9</version>
+    <version>0.0.10</version>
 
     <name>woody-http-bridge</name>
     <description>woody-http-bridge</description>
@@ -114,6 +114,11 @@
             <artifactId>adapter-common-lib</artifactId>
             <version>2.0.5</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>3.1.8</version>
         </dependency>
 
         <!--third party-->
